--- a/ng-app/src/app/navigation/navigation.component.html
+++ b/ng-app/src/app/navigation/navigation.component.html
@@ -17,4 +17,9 @@
       </li>
     </ul>
   </div>
+
+  <div class="my-2 my-lg-0">
+    <span class="navbar-text mr-2">Zalogowano jako: <span class="text-secondary">Adam Wątroba</span></span>
+    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Wyloguj</button>
+  </div>
 </nav>
