--- a/ng-app/src/app/marks/marks.component.html
+++ b/ng-app/src/app/marks/marks.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row" style="margin-top: 28px;">
     <div class="col-md-3">
-      <br>
       <div class="list-group list-group-flush">
+        <i>Klasa: Ia</i>
+        <i>półrocze 1 (2018/2019)</i>
+        <button type="button" class="btn btn-sm btn-warning">Zmień</button>
         <a *ngFor="let subject of subjects" (click)="selectSubject(subject)" class="list-group-item list-group-item-action">
           <i class="fa fa-book"></i>&nbsp;{{subject.name}}
         </a>
