Client side authentication.

--- a/ng-app/src/app/navigation/navigation.component.html
+++ b/ng-app/src/app/navigation/navigation.component.html
@@ -18,8 +18,8 @@
     </ul>
   </div>
 
-  <div class="my-2 my-lg-0">
-    <span class="navbar-text mr-2">Zalogowano jako: <span class="text-secondary">Adam Wątroba</span></span>
-    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Wyloguj</button>
+  <div *ngIf="authenticated" class="my-2 my-lg-0">
+    <span class="navbar-text mr-2">Zalogowano jako: <span class="text-secondary">{{currentUser.username}}</span></span>
+    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit" (click)="logout()">Wyloguj</button>
   </div>
 </nav>
