--- a/ng-app/src/app/components/navigation/navigation.component.html
+++ b/ng-app/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
-    <i class="fa fa-book text-warning"></i>
+    <i class="fa fa-book text-warning" aria-hidden="true"></i>
     <span class="text-warning"> Dziennik elektroniczny</span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,11 +9,14 @@
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" *ngIf="auth.hasRole('ROLE_TEACHER')">
-        <a class="nav-link" routerLink="/marks">Oceny</a>
+      <li class="nav-item" *ngIf="auth.hasRole('ROLE_ADMIN')">
+        <a class="nav-link" routerLink="/admin" [routerLinkActive]="['active']">Administrator</a>
       </li>
       <li class="nav-item" *ngIf="authenticated">
-        <a class="nav-link" routerLink="/contact">Pomoc</a>
+        <a class="nav-link" routerLink="/marks" [routerLinkActive]="['active']">Oceny</a>
+      </li>
+      <li class="nav-item" *ngIf="authenticated">
+        <a class="nav-link" routerLink="/contact" [routerLinkActive]="['active']">Pomoc</a>
       </li>
     </ul>
   </div>
