--- a/ng-app/src/app/pages/admin-panel/pages/user-management/user-management.component.html
+++ b/ng-app/src/app/pages/admin-panel/pages/user-management/user-management.component.html
@@ -1,10 +1,76 @@
 <h3 class="mt-4">Użytkownicy</h3>
 <ejs-grid #grid [dataSource]="users" [editSettings]='editSettings' [toolbar]='toolbar'
           (toolbarClick)='clickHandler($event)' (actionComplete)='actionComplete($event)'
-          (actionBegin)='actionBegin($event)' gridLines="Both">
+          gridLines="Both">
   <e-columns>
     <e-column field="username" headerText="Nazwa" width="150" isPrimaryKey="true"></e-column>
     <e-column field="email" headerText="Email"></e-column>
     <e-column field="roles" headerText="Role"></e-column>
   </e-columns>
 </ejs-grid>
+
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left" *ngIf="!editing">Tworzenie użytkownika</h4>
+    <h4 class="modal-title pull-left" *ngIf="editing">Edycja użytkownika {{editedUser.username}}</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form name="form" #f="ngForm" novalidate class="contact-form">
+      <div class="form-group">
+        <label for="name">Nazwa użytkownika</label>
+        <input type="text"
+               id="name"
+               class="form-control"
+               name="name"
+               [(ngModel)]="editedUser.username"
+               #name="ngModel"
+               [ngClass]="{ 'is-invalid': f.submitted && name.invalid }"
+               [readonly]="editing" />
+        <div *ngIf="f.submitted && name.invalid" class="invalid-input">
+          <div *ngIf="name.errors?.required">To pole jest wymagane</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password">Hasło</label>
+        <input type="password" autocomplete="new-password"
+               id="password"
+               class="form-control"
+               name="password"
+               [(ngModel)]="editedUser.password"
+               #password="ngModel"
+               [ngClass]="{ 'is-invalid': f.submitted && password.invalid }" />
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text"
+               id="email"
+               class="form-control"
+               name="email"
+               [(ngModel)]="editedUser.email"
+               #email="ngModel"
+               [ngClass]="{ 'is-invalid': f.submitted && email.invalid }"
+               required email/>
+        <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+          <div *ngIf="email.errors?.required">To pole jest wymagane</div>
+          <div *ngIf="email.errors?.email">Podany adres email jest niepoprawny</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <h5>Uprawnienia</h5>
+        <div class="form-check" *ngFor="let role of usersService.roles">
+          <input class="form-check-input" type="checkbox" [checked]="editedUser.roles.indexOf(role) > -1" [id]="role" (change)="updateRole(role,$event)">
+          <label class="form-check-label" [for]="role">
+            {{role}}
+          </label>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn" aria-label="Close" (click)="modalRef.hide()">Zamknij</button>
+    <button type="submit" class="btn btn-primary" (click)="f.form.valid && saveUser(editedUser)">Zapisz</button>
+  </div>
+</ng-template>
