--- a/ng-app/src/app/pages/admin-panel/admin-panel.component.html
+++ b/ng-app/src/app/pages/admin-panel/admin-panel.component.html
@@ -5,7 +5,7 @@
     <div class="list-group list-group-flush">
       <a class="list-group-item list-group-item-action bg-light" routerLink=""><i class="fa fa-home" aria-hidden="true"></i> Strona główna</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="users"><i class="fa fa-users" aria-hidden="true"></i> Użytkownicy</a>
-      <a class="list-group-item list-group-item-action bg-light" routerLink="configuration"><i class="fa fa-cogs" aria-hidden="true"></i> Konfiguracja systemu</a>
+      <a class="list-group-item list-group-item-action bg-light" routerLink="students"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Uczniowie</a>
     </div>
   </div>
 
