--- a/ng-app/src/app/pages/admin-panel/admin-panel.component.html
+++ b/ng-app/src/app/pages/admin-panel/admin-panel.component.html
@@ -6,6 +6,7 @@
       <a class="list-group-item list-group-item-action bg-light" routerLink=""><i class="fa fa-home" aria-hidden="true"></i> Strona główna</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="users"><i class="fa fa-users" aria-hidden="true"></i> Użytkownicy</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="students"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Uczniowie</a>
+      <a class="list-group-item list-group-item-action bg-light" routerLink="teachers"><i class="fa fa-user-plus" aria-hidden="true"></i> Nauczyciele</a>
     </div>
   </div>
 
