--- a/ng-app/src/app/pages/admin-panel/admin-panel.component.html
+++ b/ng-app/src/app/pages/admin-panel/admin-panel.component.html
@@ -7,6 +7,7 @@
       <a class="list-group-item list-group-item-action bg-light" routerLink="users"><i class="fa fa-users" aria-hidden="true"></i> Użytkownicy</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="students"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Uczniowie</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="teachers"><i class="fa fa-user-plus" aria-hidden="true"></i> Nauczyciele</a>
+      <a class="list-group-item list-group-item-action bg-light" routerLink="semesters"><i class="fa fa-calendar-o" aria-hidden="true"></i> Semestry</a>
     </div>
   </div>
 
@@ -15,6 +16,5 @@
       <router-outlet></router-outlet>
     </div>
   </div>
-
 
 </div>
