Subject basic management.

--- a/ng-app/src/app/pages/admin-panel/admin-panel.component.html
+++ b/ng-app/src/app/pages/admin-panel/admin-panel.component.html
@@ -8,6 +8,7 @@
       <a class="list-group-item list-group-item-action bg-light" routerLink="students"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Uczniowie</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="teachers"><i class="fa fa-user-plus" aria-hidden="true"></i> Nauczyciele</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="semesters"><i class="fa fa-calendar-o" aria-hidden="true"></i> Semestry</a>
+      <a class="list-group-item list-group-item-action bg-light" routerLink="subjects"><i class="fa fa-cube" aria-hidden="true"></i> Przedmioty</a>
     </div>
   </div>
 
