--- a/ng-app/src/app/pages/admin-panel/admin-panel.component.html
+++ b/ng-app/src/app/pages/admin-panel/admin-panel.component.html
@@ -9,6 +9,7 @@
       <a class="list-group-item list-group-item-action bg-light" routerLink="teachers"><i class="fa fa-user-plus" aria-hidden="true"></i> Nauczyciele</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="semesters"><i class="fa fa-calendar-o" aria-hidden="true"></i> Semestry</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="subjects"><i class="fa fa-cube" aria-hidden="true"></i> Przedmioty</a>
+      <a class="list-group-item list-group-item-action bg-light" routerLink="profiles"><i class="fa fa-object-group" aria-hidden="true"></i> Klasy</a>
     </div>
   </div>
 
