--- a/ng-app/src/app/pages/admin-panel/pages/profiles/profiles.component.html
+++ b/ng-app/src/app/pages/admin-panel/pages/profiles/profiles.component.html
@@ -1,6 +1,6 @@
 <h3 class="mt-4">Klasy</h3>
 <ejs-grid #grid [dataSource]="profiles" [editSettings]='editSettings' [toolbar]='toolbar'
-          (toolbarClick)='clickHandler($event)' (actionComplete)='actionComplete($event)'
+          (toolbarClick)='profileHandler($event)' (actionComplete)='profileActionComplete($event)'
           gridLines="Both">
   <e-columns>
     <e-column field="name" headerText="Nazwa klasy"></e-column>
@@ -8,10 +8,10 @@
   </e-columns>
 </ejs-grid>
 
-<ng-template #template>
+<ng-template #editProfileTemplate>
   <div class="modal-header">
-    <h4 class="modal-title pull-left" *ngIf="!editing">Tworzenie klasy</h4>
-    <h4 class="modal-title pull-left" *ngIf="editing">Edycja klasy {{editedProfile.name}}</h4>
+    <h4 class="modal-title pull-left" *ngIf="!editingProfile">Tworzenie klasy</h4>
+    <h4 class="modal-title pull-left" *ngIf="editingProfile">Edycja klasy {{editedProfile.name}}</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -38,5 +38,52 @@
   <div class="modal-footer">
     <button type="button" class="btn" aria-label="Close" (click)="modalRef.hide()">Zamknij</button>
     <button type="submit" class="btn btn-primary" (click)="f.form.valid && saveProfile(editedProfile)">Zapisz</button>
+  </div>
+</ng-template>
+
+<ng-template #editAllocationTemplate>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left" >Przydziały klasy {{editedProfile.name}}</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="semester">Semestr</label>
+        <select [(ngModel)]="newAllocation.semesterId" id="semester" name="semester" class="form-control">
+          <option *ngFor="let semester of semesters" [ngValue]="semester.id">{{semester.fullName}}</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="teacher">Nauczyciel</label>
+        <select [(ngModel)]="newAllocation.teacherId" id="teacher" name="teacher" class="form-control">
+          <option *ngFor="let teacher of teachers" [ngValue]="teacher.id">{{teacher.firstName}} {{teacher.lastName}}</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="subject">Przedmiot</label>
+        <select [(ngModel)]="newAllocation.subjectId" id="subject" name="subject" class="form-control">
+          <option *ngFor="let subject of subjects" [ngValue]="subject.id">{{subject.name}}</option>
+        </select>
+      </div>
+
+      <button type="submit" class="btn btn-primary mb-2" (click)="createAllocation()">Dodaj</button>
+    </form>
+    <ejs-grid #allocationGrid [dataSource]="allocations" [editSettings]='editSettings' [toolbar]='allocationToolbar'
+              (actionComplete)='allocationActionComplete($event)'
+              gridLines="Both">
+      <e-columns>
+        <e-column field="semester.fullName" headerText="Semestr" [width]="200"></e-column>
+        <e-column field="teacher.fullName" headerText="Nauczyciel"></e-column>
+        <e-column field="subject.name" headerText="Przedmiot"></e-column>
+      </e-columns>
+    </ejs-grid>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn" aria-label="Close" (click)="modalRef.hide()">Zamknij</button>
   </div>
 </ng-template>
