--- a/ng-app/src/app/components/navigation/navigation.component.html
+++ b/ng-app/src/app/components/navigation/navigation.component.html
@@ -12,12 +12,18 @@
       <li class="nav-item" *ngIf="auth.hasRole('ROLE_ADMIN')">
         <a class="nav-link" routerLink="/admin" [routerLinkActive]="['active']">Administrator</a>
       </li>
-      <li class="nav-item" *ngIf="authenticated">
-        <a class="nav-link" routerLink="/marks" [routerLinkActive]="['active']">Oceny</a>
+      <li class="nav-item" *ngIf="auth.hasRole('ROLE_TEACHER')">
+        <a class="nav-link" routerLink="/teacher" [routerLinkActive]="['active']">Nauczyciel</a>
       </li>
-      <li class="nav-item" *ngIf="authenticated">
+      <li class="nav-item" *ngIf="auth.hasRole('ROLE_PARENT')">
+        <a class="nav-link" routerLink="/parent" [routerLinkActive]="['active']">Rodzic</a>
+      </li>
+      <li class="nav-item" *ngIf="auth.hasRole('ROLE_STUDENT')">
+        <a class="nav-link" routerLink="/student" [routerLinkActive]="['active']">Uczeń</a>
+      </li>
+      <!--<li class="nav-item" *ngIf="authenticated">
         <a class="nav-link" routerLink="/contact" [routerLinkActive]="['active']">Pomoc</a>
-      </li>
+      </li>-->
     </ul>
   </div>
 
