--- a/ng-app/src/app/pages/admin-panel/admin-panel.component.html
+++ b/ng-app/src/app/pages/admin-panel/admin-panel.component.html
@@ -3,7 +3,7 @@
   <div class="bg-light border" id="sidebar-wrapper">
     <div class="sidebar-heading">Panel administratora </div>
     <div class="list-group list-group-flush">
-      <a class="list-group-item list-group-item-action bg-light" routerLink=""><i class="fa fa-home" aria-hidden="true"></i> Strona główna</a>
+      <a class="list-group-item list-group-item-action bg-light" routerLink="/admin"><i class="fa fa-home" aria-hidden="true"></i> Strona główna</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="users"><i class="fa fa-users" aria-hidden="true"></i> Użytkownicy</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="students"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Uczniowie</a>
       <a class="list-group-item list-group-item-action bg-light" routerLink="teachers"><i class="fa fa-user-plus" aria-hidden="true"></i> Nauczyciele</a>
