--- a/ng-app/src/app/pages/student-panel/student-panel.component.html
+++ b/ng-app/src/app/pages/student-panel/student-panel.component.html
@@ -4,7 +4,7 @@
     <div class="sidebar-heading">Panel ucznia </div>
     <div class="list-group list-group-flush">
       <a class="list-group-item list-group-item-action bg-light" routerLink="/student"><i class="fa fa-home" aria-hidden="true"></i> Strona główna</a>
-      <a class="list-group-item list-group-item-action bg-light" routerLink="marks"><i class="fa fa-th" aria-hidden="true"></i> Oceny</a>
+      <a class="list-group-item list-group-item-action bg-light" routerLink="marks"><i class="fa fa-th" aria-hidden="true"></i> Moje oceny</a>
     </div>
   </div>
 
