--- a/ng-app/src/app/pages/login/login.component.html
+++ b/ng-app/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
       <label for="exampleInputPassword1">Hasło</label>
       <input [(ngModel)]="model.password" name="password" type="password" class="form-control" id="exampleInputPassword1">
     </div>
-    <button type="submit" class="btn btn-primary" (click)="login()">Zaloguj</button>
+    <button type="submit" class="btn btn-warning" (click)="login()">Zaloguj</button>
   </form>
   </div>
 </div>
