--- a/ng-app/src/app/pages/admin-panel/pages/user-management/user-management.component.html
+++ b/ng-app/src/app/pages/admin-panel/pages/user-management/user-management.component.html
@@ -71,6 +71,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn" aria-label="Close" (click)="modalRef.hide()">Zamknij</button>
-    <button type="submit" class="btn btn-primary" (click)="f.form.valid && saveUser(editedUser)">Zapisz</button>
+    <button type="submit" class="btn btn-warning" (click)="f.form.valid && saveUser(editedUser)">Zapisz</button>
   </div>
 </ng-template>
