--- a/ng-app/src/app/pages/admin-panel/pages/student-management/student-management.component.html
+++ b/ng-app/src/app/pages/admin-panel/pages/student-management/student-management.component.html
@@ -55,6 +55,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn" aria-label="Close" (click)="modalRef.hide()">Zamknij</button>
-    <button type="submit" class="btn btn-primary" (click)="f.form.valid && saveStudent(editedStudent)">Zapisz</button>
+    <button type="submit" class="btn btn-warning" (click)="f.form.valid && saveStudent(editedStudent)">Zapisz</button>
   </div>
 </ng-template>
