--- a/ng-app/src/app/pages/admin-panel/pages/subjects/subjects.component.html
+++ b/ng-app/src/app/pages/admin-panel/pages/subjects/subjects.component.html
@@ -30,6 +30,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn" aria-label="Close" (click)="modalRef.hide()">Zamknij</button>
-    <button type="submit" class="btn btn-primary" (click)="f.form.valid && saveSubject(editedSubject)">Zapisz</button>
+    <button type="submit" class="btn btn-warning" (click)="f.form.valid && saveSubject(editedSubject)">Zapisz</button>
   </div>
 </ng-template>
