--- a/ng-app/src/app/pages/admin-panel/pages/teacher-management/teacher-management.component.html
+++ b/ng-app/src/app/pages/admin-panel/pages/teacher-management/teacher-management.component.html
@@ -47,6 +47,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn" aria-label="Close" (click)="modalRef.hide()">Zamknij</button>
-    <button type="submit" class="btn btn-primary" (click)="f.form.valid && saveTeacher(editedTeacher)">Zapisz</button>
+    <button type="submit" class="btn btn-warning" (click)="f.form.valid && saveTeacher(editedTeacher)">Zapisz</button>
   </div>
 </ng-template>
